--- a/react-app/src/components/styling/userMainHeaderStyling.css
+++ b/react-app/src/components/styling/userMainHeaderStyling.css
@@ -22,6 +22,7 @@
   font-family: "Bebas Neue", cursive;
   color: #000;
   font-size: 6vh;
+  white-space: nowrap;
 }
 
 .navBar {
